----------------------------------------------------------------------
 OmegaT 2.2.1
----------------------------------------------------------------------
  6 Enhancements
  2 Bugfixes
----------------------------------------------------------------------
2.2.1 vs. 2.2.0 update 4

  Implemented requests:

  - Visual identification of non-unique segments
  http://sourceforge.net/support/tracker.php?aid=1869046

  - Priority to Mark untranslated segments over Display source
  http://sourceforge.net/support/tracker.php?aid=1811562

  Other enhancements:

  - Italian localisation updated to 2.2.0 (UI, Readme, documentation)
  - Basque localisation updated to 2.2.0 (UI, Readme, documentation)
  - Dutch localisation updated to 2.2.0 (UI, Readme, documentation)
  - Japanese localisation updated to 2.2.0 (UI)

  Bug fixes:

  - ResX filter: comments appeared as translatable text.

  - HTML (including the HTML Help Compiler Filter) and XML filters: 
When translating attributes, forbidden characters (e.g., '&', '<') were not 
converted back to entities. 


----------------------------------------------------------------------
 OmegaT 2.2.0 update 4 
----------------------------------------------------------------------
  3 Enhancements
  2 Bugfixes
----------------------------------------------------------------------
2.2.0 update 4 vs. 2.2.0 update 3

  Other enhancements:

  - Russian localisation updated to 2.2.0 (UI, Instant Start, Readme)
  - Swedish localisation updated to 2.2.0 (UI, Instant Start, Readme)

  - The options of the Open XML filter have been reorganised because 
some options (e.g., Diagrams) apply to all the documents.

  Bug fixes:

  - OpenXML Excel: some parts are not available for translation
    http://sourceforge.net/support/tracker.php?aid=2885433

  - Open XML filter: The comments in Excel sheets didn't appear for 
translation

----------------------------------------------------------------------
 OmegaT 2.2.0 update 3 