@@ -103,7 +103,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
      * regenerated by the Form Editor.
      */
     // <editor-fold defaultstate="collapsed"
-    // desc="Generated Code">//GEN-BEGIN:initComponents
+    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
     private void initComponents() {
 
         buttonGroup1 = new javax.swing.ButtonGroup();
@@ -135,7 +135,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         jLabel6 = new javax.swing.JLabel();
         aggregateTagsCB = new javax.swing.JCheckBox();
 
-        setTitle(OStrings.getString("OpenXML_FILTER_OPTIONS"));
+        setTitle(OStrings.getString("OpenXML_FILTER_OPTIONS")); // NOI18N
         setCursor(new java.awt.Cursor(java.awt.Cursor.DEFAULT_CURSOR));
         setResizable(false);
         addWindowListener(new java.awt.event.WindowAdapter() {
@@ -148,7 +148,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         buttonPanel.setLayout(new java.awt.FlowLayout(java.awt.FlowLayout.RIGHT));
         buttonPanel.add(jPanel2);
 
-        org.openide.awt.Mnemonics.setLocalizedText(okButton, OStrings.getString("BUTTON_OK"));
+        org.openide.awt.Mnemonics.setLocalizedText(okButton, OStrings.getString("BUTTON_OK")); // NOI18N
         okButton.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 okButtonActionPerformed(evt);
@@ -156,7 +156,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         });
         buttonPanel.add(okButton);
 
-        org.openide.awt.Mnemonics.setLocalizedText(cancelButton, OStrings.getString("BUTTON_CANCEL"));
+        org.openide.awt.Mnemonics.setLocalizedText(cancelButton, OStrings.getString("BUTTON_CANCEL")); // NOI18N
         cancelButton.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 cancelButtonActionPerformed(evt);
@@ -169,16 +169,15 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         jPanel1.setMinimumSize(new java.awt.Dimension(167, 121));
         jPanel1.setLayout(new java.awt.GridLayout(0, 1));
 
-        org.openide.awt.Mnemonics.setLocalizedText(jLabel2, OStrings.getString("OpenDoc_TRANSLATE_ELEMENTS"));
+        org.openide.awt.Mnemonics.setLocalizedText(jLabel2, OStrings.getString("OpenDoc_TRANSLATE_ELEMENTS")); // NOI18N
         jPanel1.add(jLabel2);
 
         jLabel3.setFont(new java.awt.Font("MS Sans Serif", 1, 11));
         jLabel3.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
-        org.openide.awt.Mnemonics.setLocalizedText(jLabel3, OStrings.getString("OpenXML_WORD"));
+        org.openide.awt.Mnemonics.setLocalizedText(jLabel3, OStrings.getString("OpenXML_WORD")); // NOI18N
         jPanel1.add(jLabel3);
 
-        org.openide.awt.Mnemonics.setLocalizedText(translateHiddenTextCB,
-                OStrings.getString("OpenXML_TRANSLATE_HIDDEN_TEXT"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateHiddenTextCB, OStrings.getString("OpenXML_TRANSLATE_HIDDEN_TEXT")); // NOI18N
         translateHiddenTextCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateHiddenTextCBradiosActionPerformed(evt);
@@ -187,8 +186,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         jPanel1.add(translateHiddenTextCB);
 
         translateCommentsCB.setSelected(true);
-        org.openide.awt.Mnemonics.setLocalizedText(translateCommentsCB,
-                OStrings.getString("OpenXML_TRANSLATE_COMMENTS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateCommentsCB, OStrings.getString("OpenXML_TRANSLATE_COMMENTS")); // NOI18N
         translateCommentsCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateCommentsCBradiosActionPerformed(evt);
@@ -197,8 +195,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         jPanel1.add(translateCommentsCB);
 
         translateFootnotesCB.setSelected(true);
-        org.openide.awt.Mnemonics.setLocalizedText(translateFootnotesCB,
-                OStrings.getString("OpenXML_TRANSLATE_FOOTNOTES"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateFootnotesCB, OStrings.getString("OpenXML_TRANSLATE_FOOTNOTES")); // NOI18N
         translateFootnotesCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateFootnotesCBradiosActionPerformed(evt);
@@ -207,8 +204,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         jPanel1.add(translateFootnotesCB);
 
         translateEndnotesCB.setSelected(true);
-        org.openide.awt.Mnemonics.setLocalizedText(translateEndnotesCB,
-                OStrings.getString("OpenXML_TRANSLATE_ENDNOTES"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateEndnotesCB, OStrings.getString("OpenXML_TRANSLATE_ENDNOTES")); // NOI18N
         translateEndnotesCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateEndnotesCBradiosActionPerformed(evt);
@@ -217,8 +213,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         jPanel1.add(translateEndnotesCB);
 
         translateHeadersCB.setSelected(true);
-        org.openide.awt.Mnemonics.setLocalizedText(translateHeadersCB,
-                OStrings.getString("OpenXML_TRANSLATE_HEADERS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateHeadersCB, OStrings.getString("OpenXML_TRANSLATE_HEADERS")); // NOI18N
         translateHeadersCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateHeadersCBradiosActionPerformed(evt);
@@ -227,8 +222,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         jPanel1.add(translateHeadersCB);
 
         translateFootersCB.setSelected(true);
-        org.openide.awt.Mnemonics.setLocalizedText(translateFootersCB,
-                OStrings.getString("OpenXML_TRANSLATE_FOOTERS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateFootersCB, OStrings.getString("OpenXML_TRANSLATE_FOOTERS")); // NOI18N
         translateFootersCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateFootersCBradiosActionPerformed(evt);
@@ -238,12 +232,11 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
 
         jLabel4.setFont(new java.awt.Font("MS Sans Serif", 1, 11));
         jLabel4.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
-        org.openide.awt.Mnemonics.setLocalizedText(jLabel4, OStrings.getString("OpenXML_EXCEL"));
+        org.openide.awt.Mnemonics.setLocalizedText(jLabel4, OStrings.getString("OpenXML_EXCEL")); // NOI18N
         jPanel1.add(jLabel4);
 
         translateExcelCommentsCB.setSelected(true);
-        org.openide.awt.Mnemonics.setLocalizedText(translateExcelCommentsCB,
-                OStrings.getString("OpenXML_TRANSLATE_EXCEL_COMMENTS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateExcelCommentsCB, OStrings.getString("OpenXML_TRANSLATE_EXCEL_COMMENTS")); // NOI18N
         translateExcelCommentsCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateExcelCommentsCBradiosActionPerformed(evt);
@@ -251,8 +244,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         });
         jPanel1.add(translateExcelCommentsCB);
 
-        org.openide.awt.Mnemonics.setLocalizedText(translateSheetNamesCB,
-                OStrings.getString("OpenXML_TRANSLATE_EXCEL_SHEET_NAMES"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateSheetNamesCB, OStrings.getString("OpenXML_TRANSLATE_EXCEL_SHEET_NAMES")); // NOI18N
         translateSheetNamesCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateSheetNamesCBradiosActionPerformed(evt);
@@ -262,12 +254,11 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
 
         jLabel5.setFont(new java.awt.Font("MS Sans Serif", 1, 11));
         jLabel5.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
-        org.openide.awt.Mnemonics.setLocalizedText(jLabel5, OStrings.getString("OpenXML_POWER_POINT"));
+        org.openide.awt.Mnemonics.setLocalizedText(jLabel5, OStrings.getString("OpenXML_POWER_POINT")); // NOI18N
         jPanel1.add(jLabel5);
 
         translateSlideCommentsCB.setSelected(true);
-        org.openide.awt.Mnemonics.setLocalizedText(translateSlideCommentsCB,
-                OStrings.getString("OpenXML_TRANSLATE_SLIDE_COMMENTS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateSlideCommentsCB, OStrings.getString("OpenXML_TRANSLATE_SLIDE_COMMENTS")); // NOI18N
         translateSlideCommentsCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateSlideCommentsCBradiosActionPerformed(evt);
@@ -275,25 +266,21 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         });
         jPanel1.add(translateSlideCommentsCB);
 
-        org.openide.awt.Mnemonics.setLocalizedText(translateSlideMastersCB,
-                OStrings.getString("OpenXML_TRANSLATE_SLIDE_MASTERS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateSlideMastersCB, OStrings.getString("OpenXML_TRANSLATE_SLIDE_MASTERS")); // NOI18N
         jPanel1.add(translateSlideMastersCB);
 
-        org.openide.awt.Mnemonics.setLocalizedText(translateSlideLayoutsCB,
-                OStrings.getString("OpenXML_TRANSLATE_SLIDE_LAYOUTS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateSlideLayoutsCB, OStrings.getString("OpenXML_TRANSLATE_SLIDE_LAYOUTS")); // NOI18N
         jPanel1.add(translateSlideLayoutsCB);
 
         jLabel7.setFont(new java.awt.Font("MS Sans Serif", 1, 11));
         jLabel7.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
-        org.openide.awt.Mnemonics.setLocalizedText(jLabel7, OStrings.getString("OpenXML_GLOBAL"));
+        org.openide.awt.Mnemonics.setLocalizedText(jLabel7, OStrings.getString("OpenXML_GLOBAL")); // NOI18N
         jPanel1.add(jLabel7);
 
-        org.openide.awt.Mnemonics.setLocalizedText(translateChartsCB,
-                OStrings.getString("OpenXML_TRANSLATE_CHARTS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateChartsCB, OStrings.getString("OpenXML_TRANSLATE_CHARTS")); // NOI18N
         jPanel1.add(translateChartsCB);
 
-        org.openide.awt.Mnemonics.setLocalizedText(translateDiagramsCB,
-                OStrings.getString("OpenXML_TRANSLATE_DIAGRAMS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateDiagramsCB, OStrings.getString("OpenXML_TRANSLATE_DIAGRAMS")); // NOI18N
         translateDiagramsCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateDiagramsCBradiosActionPerformed(evt);
@@ -301,8 +288,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         });
         jPanel1.add(translateDiagramsCB);
 
-        org.openide.awt.Mnemonics.setLocalizedText(translateDrawingsCB,
-                OStrings.getString("OpenXML_TRANSLATE_DRAWINGS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateDrawingsCB, OStrings.getString("OpenXML_TRANSLATE_DRAWINGS")); // NOI18N
         translateDrawingsCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateDrawingsCBradiosActionPerformed(evt);
@@ -310,16 +296,14 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         });
         jPanel1.add(translateDrawingsCB);
 
-        org.openide.awt.Mnemonics.setLocalizedText(jLabel1,
-                "                                                                 ");
+        org.openide.awt.Mnemonics.setLocalizedText(jLabel1, "                                                                 ");
         jLabel1.setEnabled(false);
         jPanel1.add(jLabel1);
 
-        org.openide.awt.Mnemonics.setLocalizedText(jLabel6, OStrings.getString("OpenXML_GENERIC_OPTIONS"));
+        org.openide.awt.Mnemonics.setLocalizedText(jLabel6, OStrings.getString("OpenXML_GENERIC_OPTIONS")); // NOI18N
         jPanel1.add(jLabel6);
 
-        org.openide.awt.Mnemonics.setLocalizedText(aggregateTagsCB,
-                OStrings.getString("OpenXML_AGGREGATE_TAGS"));
+        org.openide.awt.Mnemonics.setLocalizedText(aggregateTagsCB, OStrings.getString("OpenXML_AGGREGATE_TAGS")); // NOI18N
         aggregateTagsCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 aggregateTagsCBActionPerformed(evt);
@@ -332,7 +316,7 @@ public class EditOpenXMLOptionsDialog extends javax.swing.JDialog {
         pack();
         java.awt.Dimension screenSize = java.awt.Toolkit.getDefaultToolkit().getScreenSize();
         java.awt.Dimension dialogSize = getSize();
-        setLocation((screenSize.width - dialogSize.width) / 2, (screenSize.height - dialogSize.height) / 2);
+        setLocation((screenSize.width-dialogSize.width)/2,(screenSize.height-dialogSize.height)/2);
     }// </editor-fold>//GEN-END:initComponents
 
     private void translateExcelCommentsCBradiosActionPerformed(java.awt.event.ActionEvent evt) {// GEN-FIRST:event_translateExcelCommentsCBradiosActionPerformed
